--- a/wicket/pom.xml
+++ b/wicket/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.zhouhy</groupId>
     <artifactId>wicket</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>wicket-demo01</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
@@ -15,6 +18,9 @@
         <wicket.version>9.3.0</wicket.version>
         <wicketstuff.version>9.2.0</wicketstuff.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <junit.version>5.7.0</junit.version>
     </properties>
 
 </project>
