--- a/wicket/wicket-common/src/main/webapp/WEB-INF/web.xml
+++ b/wicket/wicket-common/src/main/webapp/WEB-INF/web.xml
@@ -3,17 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <display-name>BootstrapCommon</display-name>
+    
     <filter>
-        <filter-name>wicket.Filter</filter-name>
+        <filter-name>wicket.BootstrapCommon</filter-name>
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
             <param-name>applicationClassName</param-name>
-            <param-value>org.zhouhy.wicket.demo01.WicketApplication</param-value>
+            <param-value>org.zhouhy.wicket.common.WicketApplication</param-value>
         </init-param>
     </filter>
 
     <filter-mapping>
-        <filter-name>wicket.Filter</filter-name>
+        <filter-name>wicket.BootstrapCommon</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 </web-app>
